--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "supports-color": "^9.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
