--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "axios": "^1.5.1",
     "cheerio": "^1.0.0-rc.12",
     "mongoose": "^7.6.1",
     "next": "13.5.4",
+    "nodemailer": "^6.9.6",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
